<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserProfile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="age">Age</string>
    <string name="rating">Rating</string>

</resources>